<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.ResultActivity">

    <TextView
        android:id="@+id/EmailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mail_share_value"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/normal_text_size"
        android:layout_marginEnd="@dimen/large_gap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_gap"
        android:fontFamily="serif-monospace"
        android:text="@string/name_share_value"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EmailTextView"
        app:layout_constraintEnd_toEndOf="@+id/EmailTextView"
        app:layout_constraintStart_toStartOf="@+id/EmailTextView" />

    <TextView
        android:id="@+id/PhoneNumberTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_gap"
        android:fontFamily="serif-monospace"
        android:text="@string/phone_numer_share_value"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/EmailTextView"
        app:layout_constraintStart_toStartOf="@+id/EmailTextView"
        app:layout_constraintTop_toBottomOf="@+id/EmailTextView" />

    <Button
        android:id="@+id/ActionShareValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_text"
        android:layout_marginTop="@dimen/large_gap"
        android:textColor="@color/black"
        android:backgroundTint="@color/button_color"
        app:layout_constraintEnd_toEndOf="@+id/PhoneNumberTextView"
        app:layout_constraintStart_toStartOf="@+id/PhoneNumberTextView"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumberTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginBottom="@dimen/large_gap"
        android:fontFamily="serif-monospace"
        android:text="@string/main_info"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/NameTextView"
        app:layout_constraintEnd_toEndOf="@+id/NameTextView"
        app:layout_constraintStart_toStartOf="@+id/NameTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>