<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/main_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputEmailMain"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_gap"
        android:hint="@string/name_input"
        app:layout_constraintBottom_toTopOf="@+id/outlinedTextFieldEmail"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldEmail"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputNameMain"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_numer_input"
        android:layout_marginTop="@dimen/large_gap"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldEmail"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldEmail"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/InputPhoneNumberMain"
            android:layout_width="match_parent"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_gap"
        android:text="@string/info_main_text_view"
        android:textColor="@color/black"
        android:fontFamily="serif-monospace"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/outlinedTextFieldName"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldName" />

    <Button
        android:id="@+id/SaveButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/save_action"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/large_gap"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldPhone"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldPhone"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>